<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ejercicio06_FormularioExamen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Nombre">Nombre</string>
    <string name="Matematicas">Matemáticas:</string>
    <string name="Ingles">Inglés</string>
    <string name="Aprobado">Aprobado</string>
    <string name="Suspenso">Suspenso</string>
    <string name="Calificacion">Calificación</string>
    <string name="Resultado">Resultado:</string>
    <string-array name="Notas">
        <item >1</item>
        <item >5</item>
        <item >10</item>
    </string-array>

</resources>
